[project]
name = "pylaagu"
version = "0.1.0-beta"
description = ""
requires-python = ">=3.11,<3.13"

[tool.poetry]
name = "pylaagu"
version = "0.1.0-beta"
description = ""
authors = ["Ravindra Jaju <jaju@msync.org>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
