[project]
name = "pylaagu"
version = "0.1.0-beta"
description = ""
requires-python = ">=3.11,<3.13"

[tool.poetry]
name = "pylaagu"
version = "0.1.0-beta"
description = ""
authors = ["Ravindra Jaju <jaju@msync.org>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "asitop>=0.0.24",
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "clang-format>=20.1.0",
    "flake8>=7.1.2",
    "grip>=4.6.2",
    "isort>=6.0.1",
    "nbformat>=5.10.4",
    "neovim>=0.3.1",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "proselint>=0.14.0",
    "pynput>=1.8.1",
    "pynvim>=0.5.2",
    "pyperclip>=1.9.0",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server[websockets,yapf]>=1.12.2",
    "ruff>=0.11.2",
    "twine>=6.1.0",
    "yapf>=0.43.0",
]
